--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DigitalFit">
-        <activity android:name=".ui.login.SplashActivity"></activity>
+        <activity android:name=".features.login.SplashActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
