--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,16 @@ android {
         viewBinding true
     }
 
+    repositories {
+        mavenCentral()
+        maven {
+            url "https://maven.springframework.org/release"
+        }
+        maven {
+            url "https://maven.restlet.com"
+        }
+    }
+
     android {
         compileOptions {
             sourceCompatibility 1.8
