--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,9 @@ dependencies {
 
     //Jetpack
    implementation 'androidx.paging:paging-runtime-ktx:3.0.1'
+    implementation 'androidx.room:room-runtime:2.3.0'
+    implementation 'androidx.room:room-compiler:2.3.0'
+            kapt "androidx.room:room-compiler:2.3.0"
 
 
     //Glide
