--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,8 +67,8 @@ dependencies {
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-alpha01'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0-alpha01'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
     //Tests
