autenticação com erro

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -62,10 +63,11 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     //Jetpack
-
     implementation 'androidx.paging:paging-runtime-ktx:3.0.1'
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation 'androidx.room:room-ktx:2.3.0'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
     kapt "androidx.room:room-compiler:2.3.0"
     implementation 'androidx.paging:paging-runtime-ktx:3.0.1'
@@ -88,5 +90,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+
+
+    //Firebase
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation platform('com.google.firebase:firebase-bom:28.4.1')
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
+
 
 }
