--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.3.0'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
+
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
     kapt "androidx.room:room-compiler:2.3.0"
     implementation 'androidx.paging:paging-runtime-ktx:3.0.1'
@@ -97,5 +98,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
     implementation platform('com.google.firebase:firebase-bom:28.4.1')
-
+    implementation 'com.google.firebase:firebase-firestore-ktx:23.0.4'
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.0'
 }
